--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,31 @@ language: node_js
 node_js:
   - 10
 
+#addons:
+#  chrome: stable
+
 addons:
-  chrome: stable
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
+#cache:
+#  directories:
+#    - "$HOME/.npm"
 
 cache:
   directories:
-    - "$HOME/.npm"
+    - ./node_modules
 
 install:
   - npm install
 
 script:
-  - npm run test-single-run -- --browsers ChromeHeadless
-  - (npm start > /dev/null &) && npm run protractor -- --capabilities.chromeOptions.args headless
+#  - npm run test-single-run -- --browsers ChromeHeadless
+#  - (npm start > /dev/null &) && npm run protractor -- --capabilities.chromeOptions.args headless
+
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+
 
