--- a/.travis.yml
+++ b/.travis.yml
@@ -4,31 +4,17 @@ language: node_js
 node_js:
   - 10
 
-#addons:
-#  chrome: stable
-
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-
-#cache:
-#  directories:
-#    - "$HOME/.npm"
+  chrome: stable
 
 cache:
   directories:
-    - ./node_modules
+    - "$HOME/.npm"
 
 install:
   - npm install
 
 script:
-#  - npm run test-single-run -- --browsers ChromeHeadless
-#  - (npm start > /dev/null &) && npm run protractor -- --capabilities.chromeOptions.args headless
-
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-
+  - npm run test-single-run -- --browsers ChromeHeadless
+  - (npm start > /dev/null &) && npm run protractor -- --capabilities.chromeOptions.args headless
 
