--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "prestart": "npm install",
     "start": "node server.js",
     "pretest": "npm install",
+    "build": "ng build",
+    "ng": "ng",
     "test": "karma start karma.conf.js",
     "test-single-run": "npm test -- --single-run",
     "preupdate-webdriver": "npm install",
